firewall.conf
# Generated by iptables-save v1.4.21 on Sun Oct 16 14:15:22 2016
*nat
:PREROUTING ACCEPT [1:32]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [5:364]
:POSTROUTING ACCEPT [1:60]
-A PREROUTING -d 192.168.0.22/32 -p tcp -m tcp --dport 1100 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DNAT --to-destination 192.168.0.1:22
COMMIT
# Completed on Sun Oct 16 14:15:22 2016
# Generated by iptables-save v1.4.21 on Sun Oct 16 14:15:22 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j LOG
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i enp0s3 -p tcp -m state --state NEW -m tcp --dport 1194 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A INPUT -i enp0s3 -p tcp -m state --state NEW -m tcp --dport 1194 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A INPUT -i enp0s3 -p udp -m state --state NEW -m udp --dport 1194 -j LOG
-A INPUT -i enp0s3 -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT
-A INPUT -i enp0s3 -p tcp -m state --state NEW -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A INPUT -i enp0s3 -p tcp -m state --state NEW -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j LOG
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 8.8.8.8/32 -i enp0s3 -o enp0s3 -p udp -m state --state NEW -m udp --dport 53 -j LOG
-A FORWARD -d 8.8.8.8/32 -i enp0s3 -o enp0s3 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT
-A FORWARD -i enp0s3 -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A FORWARD -i enp0s3 -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A FORWARD -i enp0s3 -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A FORWARD -i enp0s3 -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j LOG
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -o enp0s3 -p udp -m state --state NEW -m udp --dport 53 -j LOG
-A OUTPUT -d 8.8.8.8/32 -o enp0s3 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A OUTPUT -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A OUTPUT -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 1194 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A OUTPUT -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 1194 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A OUTPUT -o enp0s3 -p udp -m state --state NEW -m udp --dport 1194 -j LOG
-A OUTPUT -o enp0s3 -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A OUTPUT -o enp0s3 -p tcp -m state --state NEW -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
COMMIT
# Completed on Sun Oct 16 14:15:22 2016
